--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg46vWOa8OPwYfMs8jeWumTLr7dVkZhpoWID9tr5Dl-d9ONymFL0xGp90qqjwWkNmh0LBBKjXMiTIdyP8BATOgdw7UiCGtmSr2JSbSAyVif-qiX_vBnk_jX_kDR9Sv2uGMvUQrZHAOYOiu6-HATMmAQuNBnoap4UdgQeTksNK-OUZL4yPPFy8FCxuKXtJs/s1024/9d1c55b56e2868cd137fbf33746a7eed_high.webp">  
+  <meta property="og:url"
     <title>Eid Mubarak!</title> <!-- Changed title to English -->
-    <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEizWaBpZhllRbQlw8Cd-vRjp7AA7TkRGFZt11gPKmmZ35xm0jeOgB8B9T-gE4vw1RzoP9tX0frfaaX150wcMfpOM74G-sos8-DqEOd60i-jKny-b01A2U0MjhPOWuJkRP51FFOwcAlRA7Qkuya2ONkGpbIPY6mLMhRdjzCYjvlfS1cSxvRMSlcmGTd-hGQ/s280/eid.gif" type="image/gif"> <!-- Added Favicon -->
+    <link rel="icon" href="Eid al-adha wish.png"> <!-- Added Favicon -->
     <style>
         :root {
             --primary-bg: #1a1a2e; /* Deep space blue */
